switcher-slack-app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: switcher-slack-app
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: switcher-slack-app
  template:
    metadata:
      labels:
        app: switcher-slack-app
    spec:
      dnsPolicy: Default
      containers:
        - name: switcher-slack-app
          image: trackerforce/switcher-slack-app:latest
          command: ["gunicorn", "--bind", "0.0.0.0:5000", "--chdir", "src", "app:flask_app"]
          ports:
            - containerPort: 5000
              protocol: TCP
          resources: 
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "256Mi"
              cpu: "500m"
